--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <!-- Script -->
   <script>
     // Fetch data from ThingSpeak
-    const channelId = "2332306";
-    const apiKey = "75I6A3O1C0HPO2T8";
+    const channelId = "2388337";
+    const apiKey = "BB3DT4JLX3O0SKX3";
     const timestamps = [];
     const field1Data = [];
     const field2Data = [];
