--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <!-- Script -->
   <script>
     // Fetch data from ThingSpeak
-    const channelId = "2388337";
-    const apiKey = "BB3DT4JLX3O0SKX3";
+    const channelId = "2387974";
+    const apiKey = "EIQ4WWGUZTW6Y4JW";
     const timestamps = [];
     const field1Data = [];
     const field2Data = [];
